--- a/PlannerFrontend/package.json
+++ b/PlannerFrontend/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "formik": "^2.4.5",
+    "native-base": "^3.4.28",
     "react": "^18.2.0",
     "react-native": "^0.74.0",
+    "react-native-calendars": "^1.1304.1",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.30.1",
     "yup": "^1.4.0"
