--- a/PlannerFrontend/package.json
+++ b/PlannerFrontend/package.json
@@ -20,6 +20,7 @@
     "react-native-calendars": "^1.1304.1",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "^3.30.1",
+    "react-native-svg": "^15.2.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
