--- a/PlannerFrontend/package.json
+++ b/PlannerFrontend/package.json
@@ -10,12 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@formatjs/intl-pluralrules": "^5.2.12",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "formik": "^2.4.5",
+    "i18next": "^23.11.2",
     "native-base": "^3.4.28",
     "react": "^18.2.0",
+    "react-i18next": "^14.1.1",
     "react-native": "^0.74.0",
     "react-native-calendars": "^1.1304.1",
     "react-native-safe-area-context": "^3.4.1",
